# calculator

./: .gitignore  Dockerfile  README.md  __main__.py  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  test.yml
calculator/: __main__.py  argparser.py  calculator.py  cli.py
lib/: __init__.py
tests/: models.py  test_calculator.py  test_calculator_2.py
